--- a/20220304HTML/ddd.html
+++ b/20220304HTML/ddd.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styleday2.css">
 </head>
 <body>
+
     <article>
         <h1>Title</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat doloremque voluptatum harum culpa adipisci tempore nobis soluta deleniti itaque quod.</p>
-        <p>Voluptates illum repellendus ut voluptatem omnis impedit animi aut, incidunt quo enim fugit delectus, alias esse praesentium neque asperiores quae!</p>
+        <p class="info secondstyle"style="color: aquamarine;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat doloremque voluptatum harum culpa adipisci tempore nobis soluta deleniti itaque quod.</p>
+        <p id="ImFirst" >Voluptates illum repellendus ut voluptatem omnis impedit animi aut, incidunt quo enim fugit delectus, alias esse praesentium neque asperiores quae!</p>
 
         <figure>
             <img src="https://fakeimg.pl/200x200/200">
@@ -31,5 +33,6 @@
         <p>Sequi eligendi magni in odio at eaque numquam ab animi rerum autem dolorum repudiandae exercitationem maxime blanditiis, facilis, ducimus magnam!</p>
         <p>Culpa numquam repellendus porro consectetur debitis, tempora velit doloribus, dicta perferendis, aliquid enim quia quidem provident ipsa possimus nobis qui.</p>
     </article>
+
 </body>
 </html>
