--- a/20220304HTML/homework.html
+++ b/20220304HTML/homework.html
@@ -12,7 +12,8 @@
     <div class="wrap">
         <div class="item">
             <img src="https://picsum.photos/350/200/?random=10">
-            <h3>零基礎也能懂的 CSS - 概念篇<span>By Keddie・1月 27 2022・技術文章</span></h3>
+            <h3>零基礎也能懂的 CSS - 概念篇
+                <span>By Keddie・1月 27 2022・技術文章</span></h3>
         </div>
         <div class="item">
             <img src="https://picsum.photos/350/200/?random=11">
