--- a/20220309 HTML&CSS/index.html
+++ b/20220309 HTML&CSS/index.html
@@ -9,21 +9,8 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
+      <div class="item i1">1</div>
+      <div class="item i2">2</div>
     </div>
-
-    <!-- <div class="container">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-    </div> -->
-
-    <!-- <p>Title</p>
-
-    <div class="box">
-      一二三四五六七八九十自身於是社會報名集團，這裡表達害怕，就。
-    </div> -->
   </body>
 </html>
