--- a/20220310 HTML&CSS/position.html
+++ b/20220310 HTML&CSS/position.html
@@ -5,15 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./position.css" />
+    <link rel="stylesheet" href="../reset/normalize.css" />
   </head>
   <body>
-    <div class="wrap">
-      <div class="item i1">1</div>
-      <div class="item i2">2</div>
-      <div class="item i3">3</div>
-      <!-- <div class="item i4">4</div>
-      <div class="item i5">5</div> -->
-    </div>
+    <div class="box2"></div>
   </body>
 </html>
