update shopline emailsubmit

--- a/20220309 HTML&CSS/homework/shopline.html
+++ b/20220309 HTML&CSS/homework/shopline.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="./section1.css" />
   </head>
   <body>
     <header>
@@ -42,7 +41,7 @@
       </div>
     </header>
 
-    <section class="part1">
+    <section class="emailAdress_area">
       <div class="background">
         <div class="text">
           <h2>想在哪開店創業？<span>門市必備零售 POS 系統</span></h2>
@@ -51,13 +50,11 @@
             實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！
           </p>
           <div class="emailSubmit">
-            <label>
-              <input
-                class="input-email"
-                type="email"
-                placeholder="請在此輸入電子信箱 (可隨時更換)"
-              />
-            </label>
+            <input
+              class="input-email"
+              type="text"
+              placeholder="請在此輸入電子信箱 (可隨時更換)"
+            />
 
             <div class="button">
               <a href="#">免費試用</a>
