--- a/homework/shopline.html
+++ b/homework/shopline.html
@@ -41,7 +41,7 @@
       </div>
     </header>
 
-    <section class="emailAdress_area">
+    <section class="EmailAdressArea">
       <div class="background">
         <div class="text">
           <h2>想在哪開店創業？<span>門市必備零售 POS 系統</span></h2>
@@ -63,6 +63,204 @@
         </div>
         <div class="pic1">
           <img src="https://picsum.photos/300/200/?random=10" />
+        </div>
+      </div>
+    </section>
+
+    <section class="informationTitle">
+      <div class="information">
+        <h2>單一平台就能助你<span>在全通路輕鬆開店創業</span></h2>
+        <p>
+          從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，
+          <span
+            >並能同步管理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</span
+          >
+        </p>
+      </div>
+    </section>
+
+    <section class="informationContent">
+      <div class="container">
+        <div class="textArea">
+          <h2>免寫程式、多款版型 <span>輕鬆打造全能電商網站</span></h2>
+          <div class="iconWave"></div>
+          <p>
+            不會寫程式也能輕鬆架設品牌電商官網！任何產業都能找到合適的專業設計版型，以滑鼠拖曳就能完成網頁編輯，讓架設網站就像堆積木一樣簡單。
+          </p>
+          <ul>
+            <li>豐富版型主題與字型搭配</li>
+            <li>獨有網址 ＆ SSL 安全憑證</li>
+            <li>一頁商店</li>
+            <li>RWD 響應式網頁設計</li>
+            <li>SEO 搜尋引擎優化</li>
+            <li>開放 HTML／CSS 編輯</li>
+          </ul>
+          <div class="secret"><a href="#">看看開店祕技 → </a></div>
+        </div>
+        <div class="imgArea">
+          <img src="https://picsum.photos/400/300/?random=10" />
+        </div>
+      </div>
+    </section>
+
+    <section class="informationContent secondPart">
+      <div class="container rowReverse">
+        <div class="textArea">
+          <h2>支持海內外電商 <span>金流、物流一次搞定</span></h2>
+          <div class="iconWave"></div>
+          <p>
+            支持在地及國際金流、物流串接服務，提供海內外顧客最便利的付款及送貨服務，加速消費者完成下單交易，大幅降低購物車放棄率！
+          </p>
+          <ul>
+            <li>線上信用卡刷卡</li>
+            <li>超商代碼／條碼繳費</li>
+            <li>超商／宅配貨到付款</li>
+            <li>第三方金流／行動支付整合</li>
+            <li>多溫層宅配並指定運費</li>
+            <li>發票開立與串接</li>
+          </ul>
+          <div class="secret"><a href="#">了解更多金物流 → </a></div>
+        </div>
+        <div class="imgArea">
+          <img src="https://picsum.photos/300/200/?random=10" />
+        </div>
+      </div>
+    </section>
+
+    <section class="informationContent thirdPart">
+      <div class="container">
+        <div class="textArea">
+          <h2>刺激下單，創造回購 <span>行銷導流、促購模組任你玩</span></h2>
+          <div class="iconWave"></div>
+          <p>
+            多元優惠活動、會員集客機制、網紅分潤以及直播購物等豐富功能，將電商行銷玩法一網打盡，助你成功優化行銷活動成效，刺激顧客下單、吸引鐵粉回購！
+          </p>
+          <ul>
+            <li>超過 20 種優惠促銷功能</li>
+            <li>會員分級／點數／購物金</li>
+            <li>Instagram 購物功能</li>
+            <li>社群直播購物系統</li>
+            <li>Facebook／Google／LINE 廣告追蹤</li>
+            <li>Facebook／Instagram／LINE 對話式購物</li>
+          </ul>
+          <div class="secret"><a href="#">看更多優惠模組 → </a></div>
+        </div>
+        <div class="imgArea">
+          <img src="https://picsum.photos/400/300/?random=?" />
+        </div>
+      </div>
+    </section>
+
+    <section class="informationContent fourthPart">
+      <div class="container rowReverse">
+        <div class="textArea">
+          <h2>
+            O2O 全通路無縫整併 <span>輕鬆管理網店、門市以及其他通路</span>
+          </h2>
+          <div class="iconWave"></div>
+          <p>
+            不論是網店拓展門市，還是門市想發展網路生意，從商品、庫存、訂單等各項虛實店舖的資料都能完善整併，輕鬆實現全通路會員經營到多店營運。
+          </p>
+          <ul>
+            <li>門市 POS 系統</li>
+            <li>門市快速集客工具</li>
+            <li>進銷庫存／調撥／多店管理</li>
+            <li>線上線下會員／商品／庫存整合</li>
+            <li>O2O 即時銷售報表分析</li>
+            <li>串接 Shopee 蝦皮購物庫存</li>
+          </ul>
+          <div class="secret"><a href="#">了解更多全通路整合 → </a></div>
+        </div>
+        <div class="imgArea">
+          <img src="https://picsum.photos/300/200/?random=10" />
+        </div>
+      </div>
+    </section>
+
+    <section class="moreService">
+      <div class="wrap">
+        <h2>更多功能與服務</h2>
+        <div class="surviceItems">
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=6" />
+            <h3>強大庫存及訂單系統</h3>
+            <p>
+              從商品數量、貨況到訂單付款狀態、物流貨態一目瞭然，提升營運效率超有感。
+            </p>
+          </div>
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=5" />
+            <h3>即時化商店業績分析</h3>
+            <p>
+              圖表化報表助你一手掌握商店概況，讓數據助攻企業成長，營運策略更有方向。
+            </p>
+          </div>
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=4" />
+            <h3>多國語系、幣值切換</h3>
+            <p>
+              想做跨境電商也ＯＫ！提供語言、幣別、稅金等進階功能，友善應對海外消費需求。
+            </p>
+          </div>
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=3" />
+            <h3>專業顧問線上支援</h3>
+            <p>
+              迅速、透明的溝通管道，協助你快速解決從線上到線下、從在地到海外的網店疑難。
+            </p>
+          </div>
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=2" />
+            <h3>廣告行銷加值服務</h3>
+            <p>
+              由官方認證的專業投手團隊，協助品牌投遞 Facebook、Google、LINE
+              等廣告。
+            </p>
+          </div>
+          <div class="item">
+            <img src="https://picsum.photos/300/200/?random=1" />
+            <h3>老闆專屬成長社群</h3>
+            <p>
+              致力為品牌店家打造能深度交流且互助的生態體系，是拓展人脈、商機的絕佳場域。
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="popularBrand">
+      <div class="wrap">
+        <h2><span>人氣品牌</span>一致推薦使用</h2>
+        <div class="brandNavbar">
+          <div class="brand">
+            <img src="https://picsum.photos/300/200/?random=20" />
+          </div>
+          <div class="brand">
+            <img src="https://picsum.photos/300/200/?random=21" />
+          </div>
+          <div class="brand">
+            <img src="https://picsum.photos/300/200/?random=22" />
+          </div>
+          <div class="brand">
+            <img src="https://picsum.photos/300/200/?random=23" />
+          </div>
+          <div class="brand">
+            <img src="https://picsum.photos/300/200/?random=24" />
+          </div>
+        </div>
+        <div class="brandInformation">
+          <div class="textArea">
+            <a href="#">bonnyread.com.tw → </a>
+            <p>
+              SHOPLINE
+              在行動裝置上操作的順暢度很高；使用者給的建議與意見會採納，處理的速度也不錯；還一直有新功能推出，不斷成長。
+            </p>
+            <span>- BONNY & READ 店長, Stan</span>
+          </div>
+
+          <div class="imgArea">
+            <img src="https://picsum.photos/350/120/?random=15" />
+          </div>
         </div>
       </div>
     </section>
