--- a/homework/shopline.html
+++ b/homework/shopline.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="/header.css" />
   </head>
@@ -265,4 +266,122 @@
       </div>
     </section>
   </body>
+
+  <section class="demoInformation">
+    <div class="wrap">
+      <h2>
+        全亞洲超過<span class="numBackground"> 350,000 個品牌都在使用</span
+        ><span> SHOPLINE</span>
+      </h2>
+      <a href="#">免費試用14天 →</a>
+    </div>
+  </section>
+
+  <footer>
+    <section class="footerLink">
+      <div class="wrap">
+        <div class="linkList">
+          <div class="link">
+            <h4>SHOPLINE</h4>
+            <ul>
+              <li><a href="#">關於我們</a></li>
+              <li><a href="#">認識團隊</a></li>
+              <li><a href="#">人才招募</a></li>
+              <li><a href="#">合作機會</a></li>
+              <li><a href="#">精選夥伴</a></li>
+              <li><a href="#">媒體報導</a></li>
+            </ul>
+          </div>
+
+          <div class="link">
+            <h4>我要開店</h4>
+            <ul>
+              <li><a href="#">方案費用</a></li>
+              <li><a href="#">功能模組</a></li>
+              <li><a href="#">客戶案例</a></li>
+              <li><a href="#">開店說明會</a></li>
+              <li><a href="#">開店諮詢</a></li>
+            </ul>
+          </div>
+          <div class="link">
+            <h4>功能特色</h4>
+            <ul>
+              <li><a href="#">網路開店</a></li>
+              <li><a href="#">社群購物</a></li>
+              <li><a href="#">零售 POS</a></li>
+              <li><a href="#">網路商店</a></li>
+              <li><a href="#">網站製作</a></li>
+              <li><a href="#">電商物流</a></li>
+              <li><a href="#">訂單管理</a></li>
+              <li><a href="#">一頁商店</a></li>
+            </ul>
+          </div>
+          <div class="link">
+            <h4>開店資源</h4>
+            <ul>
+              <li><a href="#">開店秘技</a></li>
+              <li><a href="#">版型主題</a></li>
+              <li><a href="#">新手問答</a></li>
+              <li><a href="#">POS 硬體</a></li>
+              <li><a href="#">最新功能</a></li>
+            </ul>
+          </div>
+          <div class="link">
+            <h4>更多解決方案</h4>
+            <ul>
+              <li><a href="#">企業旗艦方案</a></li>
+              <li><a href="#">跨境電商方案</a></li>
+              <li><a href="#">廣告計畫方案</a></li>
+            </ul>
+          </div>
+          <div class="link">
+            <h4>其他資源</h4>
+            <ul>
+              <li><a href="#">電商教室</a></li>
+              <li><a href="#">充電工作坊</a></li>
+              <li><a href="#">DreamBig 創品牌</a></li>
+              <li><a href="#">電商成長學苑</a></li>
+              <li><a href="#">SHOPLINE TRENDS 電商數據庫</a></li>
+              <li><a href="#">LINE 官方帳號</a></li>
+            </ul>
+          </div>
+          <div class="link">
+            <h4>應用案例</h4>
+            <ul>
+              <li><a href="#">SHOPLINE Payments</a></li>
+              <li><a href="#">網紅口碑行銷方案</a></li>
+              <li><a href="#">實體零售</a></li>
+              <li><a href="#">IG 直播 +1</a></li>
+              <li><a href="#">社群電商工具包</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="COVID19Solution">
+          <a href="#">COVID-19 應變措施</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="footerAbout">
+      <div class="wrapdown">
+        <div class="footerInformation">
+          <a href="#">網站地圖</a>
+          <a href="#" class="middle">隱私權政策</a>
+          <a href="#">會員條款</a>
+        </div>
+        <div class="iconLink">
+          <a href="#"><img src="./icon/FB.png" alt="" /></a>
+          <a href="#"><img src="./icon/IN.png" alt="" /></a>
+          <a href="#"><img src="./icon/IG.png" alt="" /></a>
+          <a href="#"><img src="./icon/youtube.png" alt="" /></a>
+          <a href="#"><img src="./icon/line.png" alt="" /></a>
+          <a href="#"><img src="./icon/mail.png" alt="" /></a>
+        </div>
+        <p>
+          服務時間星期一至五上午10點至晚上7點
+          <span>© Copyright 2013-22 SHOPLINE Limited.</span>
+        </p>
+      </div>
+    </section>
+  </footer>
 </html>
