--- a/homework/shopline.html
+++ b/homework/shopline.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
     <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
       <div class="wrap">
         <div class="header-top">
-          <a href="#" class="icon"><img src="./earth.svg" alt="" /></a>
+          <a href="#" class="icon"
+            ><img src="./icon/icons8-globe-earth-30.png" alt=""
+          /></a>
           <a href="#">幫助中心</a>
           <a href="#">登入網店</a>
         </div>
