--- a/homework/shopline.html
+++ b/homework/shopline.html
@@ -21,7 +21,7 @@
 
         <div class="header-bottom">
           <div class="logo">
-            <img src="/logo.png" alt="" />
+            <img src="logo.png" alt="logo" />
           </div>
 
           <nav>
