HTML navbarList homework2

--- a/homework/shopline.html
+++ b/homework/shopline.html
@@ -21,7 +21,7 @@
 
         <div class="header-bottom">
           <div class="logo">
-            <img src="./logo.png" alt="logo" />
+            <h1><img src="./logo.png" alt="logo" /></h1>
           </div>
 
           <nav>
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div class="pic1">
+        <div class="pic">
           <img src="https://picsum.photos/300/200/?random=10" />
         </div>
       </div>
