add homework toyota

--- a/homework2/navbarlist.html
+++ b/homework2/navbarlist.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navbar">
           <div class="navItem">
-            <a href="#">開店服務</a>
+            <a href="#" class="navName">開店服務</a>
             <div class="navList">
               <div class="navText">
                 <h4>網路開店</h4>
