HTML 5rubyRWD homework add

--- a/homework3/work1/Toyota.html
+++ b/homework3/work1/Toyota.html
@@ -5,57 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section class="contorlFun">
       <div class="wrap">
-
         <div class="bgImg">
-            <img src="https://picsum.photos/695/430/?random=10">
-            <div class="main-title">
-                <div class="title">
-                  <h2>01操控樂趣</h2>
-                </div>
-                <div class="content">
-                  <h3>人人滿意的駕駛體驗</h3>
-                  <p>
-                    透過最佳重量分配，實現平順起步，職先穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。
-                  </p>
-                </div>
-              </div>
+          <a href="#" class="imgLink"
+            ><img src="https://picsum.photos/695/430/?random=10"
+          /></a>
         </div>
-
-
-        <div class="updateIfo">
-          <div class="title">
-            <h3>我們做了這些革新</h3>
+        <div class="titleWrap">
+          <div class="mainTitle">
+            <div class="title">
+              <h2>01操控樂趣</h2>
+            </div>
+            <div class="content">
+              <h3>人人滿意的駕駛體驗</h3>
+              <p>
+                透過最佳重量分配，實現平順起步，職先穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。
+              </p>
+            </div>
           </div>
-          <div class="contentText">
-            <div class="text">
-              <h4>低重心設計</h4>
-              <p>
-                透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
-              </p>
+        </div>
+        <!-- 
+        <div class="updateInfoWrap">
+          <div class="updateIfo">
+            <div class="title">
+              <h3>我們做了這些革新</h3>
             </div>
-            <div class="text">
-              <h4>低重心設計</h4>
-              <p>
-                透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
-              </p>
-            </div>
-            <div class="text">
-              <h4>低重心設計</h4>
-              <p>
-                透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
-              </p>
+            <div class="contentText">
+              <div class="text">
+                <h4>低重心設計</h4>
+                <p>
+                  透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                </p>
+              </div>
+              <div class="text">
+                <h4>低重心設計</h4>
+                <p>
+                  透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                </p>
+              </div>
+              <div class="text">
+                <h4>低重心設計</h4>
+                <p>
+                  透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                </p>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="icon">
-            <img src="./icon/youtube.png" alt="">
-        </div>
+        <img src="./icon/youtube.png" alt="" />
+        </div> -->
+      </div>
     </section>
   </body>
 </html>
