--- a/homework3/work1/Toyota.html
+++ b/homework3/work1/Toyota.html
@@ -10,28 +10,31 @@
   <body>
     <section class="contorlFun">
       <div class="wrap">
-        <div class="bgImg">
-          <a href="#" class="imgLink"
-            ><img src="https://picsum.photos/695/430/?random=10"
-          /></a>
-        </div>
-        <div class="titleWrap">
-          <div class="mainTitle">
-            <div class="title">
-              <h2>01操控樂趣</h2>
-            </div>
+        <div class="mainTitle">
+          <div class="titleArea">
+            <h2 class="title">01 <span class="titleSpan">操控樂趣</span></h2>
+          </div>
+          <div class="contentArea">
             <div class="content">
               <h3>人人滿意的駕駛體驗</h3>
               <p>
                 透過最佳重量分配，實現平順起步，職先穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。
               </p>
             </div>
+            <div class="bgImg">
+              <a href="#" class="imgLink"
+                ><img src="https://picsum.photos/695/430/?random=10"
+              /></a>
+              <div class="icon">
+                <img src="./icon/youtube.png" alt="" />
+              </div>
+            </div>
           </div>
         </div>
-        <!-- 
+
         <div class="updateInfoWrap">
           <div class="updateIfo">
-            <div class="title">
+            <div class="titleText">
               <h3>我們做了這些革新</h3>
             </div>
             <div class="contentText">
@@ -42,24 +45,214 @@
                 </p>
               </div>
               <div class="text">
-                <h4>低重心設計</h4>
+                <h4>車體剛性強化</h4>
                 <p>
-                  透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                  車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提高車身抗扭剛性，強化駕駛穩定性及安全性。
                 </p>
               </div>
               <div class="text">
-                <h4>低重心設計</h4>
+                <h4>四輪獨立懸吊</h4>
                 <p>
-                  透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                  搭載全新四輪獨立懸吊設定，透過懸吊的高承載強度，保持輪胎抓地力，同時兼顧轉向靈敏度與清晰路感回饋，提升駕馭樂趣。
                 </p>
               </div>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="securitySafe mainTitleRight">
+      <div class="wrap">
+        <div class="mainTitle">
+          <div class="titleArea">
+            <h2 class="title"><span class="titleSpan">安全守護</span>02</h2>
+          </div>
+          <div class="contentArea">
+            <div class="content">
+              <h3>行車更安心的高剛性車體</h3>
+              <p>
+                你的愛車會妥善保護你，強悍穩固的車身可使你安全無虞。世界級的安全功能讓你輕鬆自如享受旅程、毫無後顧之憂。
+              </p>
+            </div>
+            <div class="bgImg">
+              <a href="#" class="imgLink"
+                ><img src="https://picsum.photos/695/430/?random=10"
+              /></a>
+              <div class="icon">
+                <img src="./icon/youtube.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
 
-        <div class="icon">
-        <img src="./icon/youtube.png" alt="" />
-        </div> -->
+        <div class="updateInfoWrap">
+          <div class="updateIfo">
+            <div class="titleText">
+              <h3>我們做了這些革新</h3>
+            </div>
+            <div class="contentText">
+              <div class="text">
+                <h4>主動安全</h4>
+                <p>
+                  以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。
+                </p>
+              </div>
+              <div class="text">
+                <h4>被動安全</h4>
+                <p>
+                  堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="comfortableArea">
+      <div class="wrap">
+        <div class="mainTitle">
+          <div class="titleArea">
+            <h2 class="title">03 <span class="titleSpan">乘坐舒適</span></h2>
+          </div>
+          <div class="contentArea">
+            <div class="content">
+              <h3>令人放鬆舒適的車室空間</h3>
+              <p>
+                車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。
+              </p>
+            </div>
+            <div class="bgImg">
+              <a href="#" class="imgLink"
+                ><img src="https://picsum.photos/695/430/?random=10"
+              /></a>
+              <div class="icon">
+                <img src="./icon/youtube.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="updateInfoWrap">
+          <div class="updateIfo">
+            <div class="titleText">
+              <h3>我們做了這些革新</h3>
+            </div>
+            <div class="contentText">
+              <div class="text">
+                <h4>駕駛位置最佳化</h4>
+                <p>
+                  針對駕駛位置進行徹底的修改，讓駕駛者可如同握手般自然且舒適地操控方向盤。
+                </p>
+              </div>
+              <div class="text">
+                <h4>駕馭視野佳</h4>
+                <p>
+                  考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區極小化，使駕駛視野更開闊，同步提升駕馭安全。
+                </p>
+              </div>
+              <div class="text">
+                <h4>更寧靜的車室</h4>
+                <p>
+                  採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安全的感受。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="userExpre mainTitleRight">
+      <div class="wrap">
+        <div class="mainTitle">
+          <div class="titleArea">
+            <h2 class="title"><span class="titleSpan">以人為本</span>04</h2>
+          </div>
+          <div class="contentArea">
+            <div class="content">
+              <h3>人使用者導向的貼心設計</h3>
+              <p>
+                藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李廂空間最適化，均細心考量，更加貼近使用者真正所需要與習慣，並給予即時回應。
+              </p>
+            </div>
+            <div class="bgImg">
+              <a href="#" class="imgLink"
+                ><img src="https://picsum.photos/695/430/?random=10"
+              /></a>
+              <div class="icon">
+                <img src="./icon/youtube.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="updateInfoWrap">
+          <div class="updateIfo">
+            <div class="titleText">
+              <h3>我們做了這些革新</h3>
+            </div>
+            <div class="contentText">
+              <div class="text">
+                <h4>優異油耗表現</h4>
+                <p>
+                  以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。
+                </p>
+              </div>
+              <div class="text">
+                <h4>行李廂空間最適化</h4>
+                <p>
+                  以PRIUS為例，透過將電池位置移到後座下方，讓行李廂擁有更大的空間。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="proundDesign">
+      <div class="wrap">
+        <div class="mainTitle">
+          <div class="titleArea">
+            <h2 class="title">05 <span class="titleSpan">引以為傲</span></h2>
+          </div>
+          <div class="contentArea">
+            <div class="content">
+              <h3>極具吸引力的精心設計</h3>
+              <p>
+                TNGA車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。
+              </p>
+            </div>
+            <div class="bgImg">
+              <a href="#" class="imgLink"
+                ><img src="https://picsum.photos/695/430/?random=10"
+              /></a>
+              <div class="icon">
+                <img src="./icon/youtube.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="updateInfoWrap">
+          <div class="updateIfo">
+            <div class="titleText">
+              <h3>我們做了這些革新</h3>
+            </div>
+            <div class="contentText">
+              <div class="text">
+                <h4>設計概念</h4>
+                <p>
+                  TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。
+                </p>
+              </div>
+              <div class="text">
+                <h4>環保概念</h4>
+                <p>
+                  為了對環境保護盡一份心力，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
