--- a/homework3/work2/rubyRWD.html
+++ b/homework3/work2/rubyRWD.html
@@ -30,20 +30,37 @@
             </div>
           </div>
           <div class="content">
-            <p>
-              從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔
-              HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。 2018
-              年成為
-              Youtuber，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。
-              iT 邦幫忙鐵人賽連續三屆冠軍、連續兩屆優選，於 2020
-              出版「金魚都能懂的 CSS
-              選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書）」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。
-            </p>
+            <div class="contentDetail">
+              <p>
+                從視覺設計轉職前端的斜槓開發者，活躍於臺灣各大技術研討會，熟稔
+                HTML & CSS、Bootstrap、RWD、CSS3 等，為國內知名前端技術講師。
+              </p>
+              <p class="middlePadding">
+                2018年成為
+                <a href="#" class="wordsLink">Youtuber</a>
+                ，致力於使用簡單易懂的方式讓新手能夠輕鬆學習前端開發技能。
+              </p>
+              <p>
+                <a href="#" class="wordsLink">iT 邦幫忙鐵人賽</a>
+                連續三屆冠軍、連續兩屆優選，於 2020出版「<a
+                  href="#"
+                  class="wordsLink"
+                  >金魚都能懂的
+                  CSS選取器：金魚都能懂了你還怕學不會嗎（iT邦幫忙鐵人賽系列書
+                  ）</a
+                >
+                」一書，除了熱衷於牛排的熟成，目前日益精進於釣魚技能。
+              </p>
+            </div>
           </div>
-          <div class="links">
-            <span class="otherClass">講師其他課程</span>
-            <button class="link">網頁前湍設計女性專班</button>
-            <button class="link">HTML 網頁設計新手村</button>
+          <div class="linksInformation">
+            <div class="otherClass">
+              <h4>講師其他課程</h4>
+            </div>
+            <div class="links">
+              <a class="link" href="#">網頁前湍設計女性專班</a>
+              <a class="link" href="#">HTML 網頁設計新手村</a>
+            </div>
           </div>
         </div>
         <div class="teacherInformation">
@@ -51,7 +68,7 @@
             <div class="pic">
               <img
                 class="photo"
-                src="https://picsum.photos/300/300/?random=10"
+                src="https://picsum.photos/300/300/?random=8"
               />
             </div>
             <div class="introduce">
@@ -66,20 +83,34 @@
             </div>
           </div>
           <div class="content">
-            <p>
-              五倍紅寶石程式資訊教育股份有限公司負責人，在國內外各大型技術研討會擔任講者，參與過日本
-              RubyKaigi、日本 Ruby World Conference、臺灣微軟 Azure Developer
-              Day 、RubyConf Taiwan、JSDC、WebConf
-              等。有二十年程式開發經驗和十多年的教學經驗，在臺灣推廣 Ruby 及 Git
-              多年，在各大專院校與企業開課，深受學員喜愛。
-              雖非資訊本科系出身，但喜歡寫程式，而且希望可以寫一輩子程式的電腦阿宅。
-              著有「為你自己學 Git」與「為你自己學 Ruby on Rails」暢銷技術書。
-            </p>
+            <div class="contentDetail">
+              <p>
+                五倍紅寶石程式資訊教育股份有限公司負責人，在國內外各大型技術研討會擔任講者，參與過日本
+                RubyKaigi、日本 Ruby World Conference、臺灣微軟 Azure Developer
+                Day 、RubyConf Taiwan、JSDC、WebConf
+                等。有二十年程式開發經驗和十多年的教學經驗，在臺灣推廣 Ruby 及
+                Git 多年，在各大專院校與企業開課，深受學員喜愛。
+              </p>
+              <p class="middlePadding">
+                雖非資訊本科系出身，但喜歡寫程式，而且希望可以寫一輩子程式的電腦阿宅。
+              </p>
+              <p>
+                著有 「<a href="#" class="wordsLink">為你自己學 Git</a>」與「<a
+                  href="#"
+                  class="wordsLink"
+                  >為你自己學 Ruby on Rails</a
+                >」暢銷技術書。
+              </p>
+            </div>
           </div>
-          <div class="links">
-            <span class="otherClass">講師其他課程</span>
-            <button class="link">網頁前湍設計女性專班</button>
-            <button class="link">HTML 網頁設計新手村</button>
+          <div class="linksInformation">
+            <div class="otherClass">
+              <h4>講師其他課程</h4>
+            </div>
+            <div class="links">
+              <a class="link" href="#">Ruby on Rails 實戰課程</a>
+              <a class="link" href="#">坐上Git時光機 - 版本控制</a>
+            </div>
           </div>
         </div>
         <div class="teacherInformation">
@@ -87,12 +118,13 @@
             <div class="pic">
               <img
                 class="photo"
-                src="https://picsum.photos/300/300/?random=10"
+                src="https://picsum.photos/300/300/?random=6"
               />
             </div>
             <div class="introduce">
               <h3>
-                <span class="skill">Ruby / Git 講師</span> 高見龍 (Eddie Kao)
+                <span class="skill">Vue / JavaScript 講師</span> 許國政 (Kuro
+                Hsu)
               </h3>
               <div class="iconLinks">
                 <a href="#"><img src="./icon/FB.png" alt="" /></a>
@@ -102,20 +134,30 @@
             </div>
           </div>
           <div class="content">
-            <p>
-              五倍紅寶石程式資訊教育股份有限公司負責人，在國內外各大型技術研討會擔任講者，參與過日本
-              RubyKaigi、日本 Ruby World Conference、臺灣微軟 Azure Developer
-              Day 、RubyConf Taiwan、JSDC、WebConf
-              等。有二十年程式開發經驗和十多年的教學經驗，在臺灣推廣 Ruby 及 Git
-              多年，在各大專院校與企業開課，深受學員喜愛。
-              雖非資訊本科系出身，但喜歡寫程式，而且希望可以寫一輩子程式的電腦阿宅。
-              著有「為你自己學 Git」與「為你自己學 Ruby on Rails」暢銷技術書。
-            </p>
+            <div class="contentDetail">
+              <p>
+                業界資深前端開發者，為臺灣各大型技術研討會
+                JSDC、WebConf、MOPCON、COSCUP 的知名講者。
+              </p>
+              <p class="middlePadding">
+                於 2019 年出版「<a href="#" class="wordsLink"
+                  >0 陷阱！0 誤解！8 天重新認識 JavaScript！</a
+                >」，攻佔各大技術書籍排行榜。
+              </p>
+              <p>
+                同時身兼 Vue.js Taiwan
+                社群主辦人，主辦的活動場場秒殺一票難求，衍伸開發的週邊商品精緻實用，譽為被程式耽誤的週邊商品業者。
+              </p>
+            </div>
           </div>
-          <div class="links">
-            <span class="otherClass">講師其他課程</span>
-            <button class="link">網頁前湍設計女性專班</button>
-            <button class="link">HTML 網頁設計新手村</button>
+          <div class="linksInformation">
+            <div class="otherClass">
+              <h4>講師其他課程</h4>
+            </div>
+            <div class="links">
+              <a class="link" href="#">Vue.js與Vuex前端開發實戰</a>
+              <a class="link" href="#">JavaScript / jQuery 前端開發入門實戰</a>
+            </div>
           </div>
         </div>
         <div class="teacherInformation">
@@ -123,13 +165,11 @@
             <div class="pic">
               <img
                 class="photo"
-                src="https://picsum.photos/300/300/?random=10"
+                src="https://picsum.photos/300/300/?random=5"
               />
             </div>
             <div class="introduce">
-              <h3>
-                <span class="skill">Ruby / Git 講師</span> 高見龍 (Eddie Kao)
-              </h3>
+              <h3><span class="skill">React 講師</span> 廖珀均 (奶綠茶)</h3>
               <div class="iconLinks">
                 <a href="#"><img src="./icon/FB.png" alt="" /></a>
                 <a href="#"><img src="./icon/IG.png" alt="" /></a>
@@ -137,21 +177,24 @@
               </div>
             </div>
           </div>
-          <div class="content">
-            <p>
-              五倍紅寶石程式資訊教育股份有限公司負責人，在國內外各大型技術研討會擔任講者，參與過日本
-              RubyKaigi、日本 Ruby World Conference、臺灣微軟 Azure Developer
-              Day 、RubyConf Taiwan、JSDC、WebConf
-              等。有二十年程式開發經驗和十多年的教學經驗，在臺灣推廣 Ruby 及 Git
-              多年，在各大專院校與企業開課，深受學員喜愛。
-              雖非資訊本科系出身，但喜歡寫程式，而且希望可以寫一輩子程式的電腦阿宅。
-              著有「為你自己學 Git」與「為你自己學 Ruby on Rails」暢銷技術書。
-            </p>
+          <div class="contenSmall">
+            <div class="contentDetail">
+              <p>資深前端開發者與程式開發講師，授課資歷十年以上。</p>
+              <p class="middlePadding">
+                擅長 HTML、CSS、JavaScript、jQuery、Vue、React 開發應用與
+                Webpack 前端打包工具等，專修各種前端跨平台的疑難雜症。
+              </p>
+              <p>另一個身份為花鬍子樂團吉他手，育有二貓，喜愛小酌。</p>
+            </div>
           </div>
-          <div class="links">
-            <span class="otherClass">講師其他課程</span>
-            <button class="link">網頁前湍設計女性專班</button>
-            <button class="link">HTML 網頁設計新手村</button>
+          <div class="linksInformation">
+            <div class="otherClass">
+              <h4>講師其他課程</h4>
+            </div>
+            <div class="links">
+              <a class="link" href="#">React 全攻略 - 入門到進階</a>
+              <a class="link" href="#">升級前端技術從 Tailwind CSS 開始</a>
+            </div>
           </div>
         </div>
       </div>
