--- a/20220328 HTML&CSS/practice.html
+++ b/20220328 HTML&CSS/practice.html
@@ -13,6 +13,7 @@
     <title>Hello, world!</title>
     <style>
       * {
+        /* outline: 1px solid red; */
         margin: 0;
         padding: 0;
       }
@@ -39,47 +40,47 @@
     </style>
   </head>
   <body>
-    <footer class="footer-contact mt-4">
-      <div class="container d-md-flex mb-4">
-        <div class="row w-30">
-          <div class="col-12">
+    <footer class="footer-contact">
+      <div class="container-fluid d-md-flex p-0">
+        <div class="d-block mx-auto">
+          <div class="col-4 col-md-12">
             <img src="https://picsum.photos/300/200/?random=10" class="w-100" />
           </div>
-          <div class="col mt-2">
+          <div class="col-12 col-md-12 mt-2">
             <a href="#">電話 | (02) 2331-5247</a>
             <a href="#">信箱 | course@5xcampus.com</a>
             <a href="#">地址 | 10046 台北市中正區衡陽路 7 號 5 樓</a>
           </div>
         </div>
 
-        <div class="row w-60 contactDetails ms-auto">
-          <div class="col-6 col-md-4 pb-3">
+        <div class="row w-60 mx-auto">
+          <div class="col-6 col-md-4">
             <h3>專業課程</h3>
-            <div class="col">
+            <div class="newsLink">
               <a href="#">ASTRO Camp</a>
               <a href="#">線上課程</a>
               <a href="#">短期課程</a>
             </div>
           </div>
-          <div class="col-6 col-md-4 pb-3">
+          <div class="col-6 col-md-4">
             <h3>關於我們</h3>
-            <div class="col">
+            <div class="newsLink">
               <a href="#">關於五倍紅寶石</a>
               <a href="#">聯絡我們</a>
               <a href="#">媒體報導</a>
               <a href="#">加入我們</a>
             </div>
           </div>
-          <div class="col-6 col-md-4 pb-3">
+          <div class="col-6 col-md-4">
             <h3>部落格</h3>
-            <div class="col">
+            <div class="newsLink">
               <a href="#">技術文章</a>
               <a href="#">五倍消息</a>
             </div>
           </div>
-          <div class="col-6 col-md-4 pb-3">
+          <div class="col-6 col-md-4">
             <h3>幫助與政策</h3>
-            <div class="col">
+            <div class="newsLink">
               <a href="#">常見問題</a>
               <a href="#">隱私權政策</a>
               <a href="#">服務條款</a>
